# music_processing

./: Dockerfile  README.md  plan.md  pyproject.toml
conda/: magenta.yml
notebooks/: midi.ipynb
src/: requirements.txt
